<resources>
    <string name="app_name">Todo sobre series</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="gender">Genero</string>
    <string name="actors">Actores</string>
    <string name="seasons">Temporadas</string>
    <string name="chapters">Capítulos</string>
</resources>
